1.0 of emoji plugin